--- a/starter-code/index.scss
+++ b/starter-code/index.scss
@@ -3,34 +3,45 @@ body {
 	padding: 0;
 	background: url("../starter-code/assets/home/background-home-desktop.jpg");
 	color: white;
+	background-size: cover;
+	background-position: top;
+	overflow: hidden;
+}
+.line {
+	height: 3px;
+	color: gray;
+	width: 100px;
 }
 
 .logo {
 	background: url("../starter-code/assets/shared/logo.svg");
 	background-repeat: no-repeat;
-	width: 100px;
-	height: 100px;
-	position: relative;
-	left: 54px;
-	top: -74px;
+	width: 50px;
+	height: 50px;
+	position: absolute;
+	left: 30px;
+	top: 50px;
 }
 .navbar {
-	border: solid gold;
+	position: relative;
+	top: 50px;
 	display: grid;
 	grid-template-columns: 1fr auto minmax(600px, 1fr) 1fr;
-	margin-left: 35%;
-	margin-top: 40px;
+	left: 35%;
 	height: 90px;
 	justify-content: space-evenly;
 	align-items: center;
+	background: hsla(0, 0%, 100%, 0.1);
+	backdrop-filter: blur(1.5rem);
 
 	nav {
 		grid-column: 2 / 4;
+		margin-left: 60px;
 	}
 
 	nav ul {
 		display: flex;
-		justify-content: space-evenly;
+		justify-content: space-around;
 	}
 
 	a {
@@ -48,7 +59,46 @@ ul {
 
 .container {
 	position: relative;
-	left: 50px;
-	top: 330px;
-	width: 380px;
+	top: 50px;
+	height: max-content;
+	display: flex;
+	justify-content: space-around;
+	align-items: flex-end;
+
+	.desc {
+		width: min-content;
+	}
+
+	h1 {
+		text-transform: uppercase;
+		font-size: 8em;
+		text-align: center;
+		margin: auto 20px;
+	}
+
+	h3 {
+		text-transform: uppercase;
+		font-size: 1.5em;
+	}
+
+	.bot {
+		p {
+			font-size: 1.2em;
+		}
+	}
+}
+
+.explore {
+	width: 236px;
+	height: 236px;
+	border-radius: 50%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background: white;
+
+	p {
+		color: black;
+		font-size: 2em;
+	}
 }
