--- a/styles/index.css
+++ b/styles/index.css
@@ -3,26 +3,35 @@ body {
   padding: 0;
   background: url("../starter-code/assets/home/background-home-desktop.jpg");
   color: white;
+  background-size: cover;
+  background-position: top;
+  overflow: hidden;
+}
+
+.line {
+  height: 3px;
+  color: gray;
+  width: 100px;
 }
 
 .logo {
   background: url("../starter-code/assets/shared/logo.svg");
   background-repeat: no-repeat;
-  width: 100px;
-  height: 100px;
-  position: relative;
-  left: 54px;
-  top: -74px;
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  left: 30px;
+  top: 50px;
 }
 
 .navbar {
-  border: solid gold;
+  position: relative;
+  top: 50px;
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: 1fr auto minmax(600px, 1fr) 1fr;
       grid-template-columns: 1fr auto minmax(600px, 1fr) 1fr;
-  margin-left: 35%;
-  margin-top: 40px;
+  left: 35%;
   height: 90px;
   -webkit-box-pack: space-evenly;
       -ms-flex-pack: space-evenly;
@@ -30,21 +39,24 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  background: rgba(255, 255, 255, 0.1);
+  -webkit-backdrop-filter: blur(1.5rem);
+          backdrop-filter: blur(1.5rem);
 }
 
 .navbar nav {
   -ms-grid-column: 2;
   -ms-grid-column-span: 2;
   grid-column: 2 / 4;
+  margin-left: 60px;
 }
 
 .navbar nav ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
 }
 
 .navbar a {
@@ -61,8 +73,60 @@ ul {
 
 .container {
   position: relative;
-  left: 50px;
-  top: 330px;
-  width: 380px;
+  top: 50px;
+  height: -webkit-max-content;
+  height: -moz-max-content;
+  height: max-content;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+}
+
+.container .desc {
+  width: -webkit-min-content;
+  width: -moz-min-content;
+  width: min-content;
+}
+
+.container h1 {
+  text-transform: uppercase;
+  font-size: 8em;
+  text-align: center;
+  margin: auto 20px;
+}
+
+.container h3 {
+  text-transform: uppercase;
+  font-size: 1.5em;
+}
+
+.container .bot p {
+  font-size: 1.2em;
+}
+
+.explore {
+  width: 236px;
+  height: 236px;
+  border-radius: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background: white;
+}
+
+.explore p {
+  color: black;
+  font-size: 2em;
 }
 /*# sourceMappingURL=index.css.map */
