--- a/styles/index.css
+++ b/styles/index.css
@@ -1,3 +1,25 @@
+/*-----------------------functin for color in sass-------------------------------------------------*/
+/*---------------------------close function for color object----------------------------------*/
+/*--------------------------------------------------------------------------------------------------*/
+/*---------------------------CUSTOM PROPERTIES------------------------------------------------------*/
+/*--------------------------------------------------------------------------------------------------*/
+:root {
+  /*--font sizes---*/
+  --fs-900: 9.375rem;
+  --fs-800: 6.25rem;
+  --fs-700: 3.5rem;
+  --fs-600: 2rem;
+  --fs-500: 1.75rem;
+  --fs-400: 1.125rem;
+  --fs-300: 1rem;
+  --fe-200: 0.875rem;
+  /*---font families--*/
+  --ff-serif: "Bellefair", serif;
+  --ff-sans-cond: "Barlow Condensed", sans-serif;
+  --ff-sans-normal: "Barlow", sans-serif;
+}
+
+/*--colors-----*/
 /*--------------------------------------------------------------------------------------------------*/
 /*---------------------------DO RESETS FIRST--------------------------------------------------------*/
 /*--------------------------------------------------------------------------------------------------*/
@@ -8,7 +30,24 @@
 }
 
 /* Remove default margin */
-body,
+body {
+  min-height: 100vh;
+  text-rendering: optimizeSpeed;
+  line-height: 1.5;
+  font-family: var(--ff-sans-normal);
+  font-size: var(--fs-400);
+  color: rgba(255, 255, 255, 0);
+  background-color: rgba(12, 14, 24, 0);
+  line-height: 1.5;
+  min-height: 100vh;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: min-content 1fr;
+      grid-template-rows: -webkit-min-content 1fr;
+      grid-template-rows: min-content 1fr;
+  overflow-x: hidden;
+}
+
 h1,
 h2,
 h3,
@@ -27,17 +66,12 @@ html:focus-within {
   scroll-behavior: smooth;
 }
 
-body {
-  min-height: 100vh;
-  text-rendering: optimizeSpeed;
-  line-height: 1.5;
-}
-
 a:not([class]) {
   text-decoration-skip-ink: auto;
 }
 
-img {
+img,
+picture {
   max-width: 100%;
   display: block;
 }
@@ -66,119 +100,147 @@ select {
 /* -------------------------------------------------------------------------------------------------------*/
 /*--------------------------IMPORTANT RESETS--------------------------------------------------------------*/
 /*---------------------------------------------------------------------------------------------------------*/
-.logo {
-  background: url("../starter-code/assets/shared/logo.svg");
-  background-repeat: no-repeat;
-  width: 50px;
-  height: 50px;
-  position: absolute;
-  left: 30px;
-  top: 50px;
-}
-
-.navbar {
-  position: relative;
-  top: 50px;
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: 1fr auto minmax(600px, 1fr) 1fr;
-      grid-template-columns: 1fr auto minmax(600px, 1fr) 1fr;
-  left: 35%;
-  height: 90px;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  background: rgba(255, 255, 255, 0.1);
-  -webkit-backdrop-filter: blur(1.5rem);
-          backdrop-filter: blur(1.5rem);
-}
-
-.navbar nav {
-  -ms-grid-column: 2;
-  -ms-grid-column-span: 2;
-  grid-column: 2 / 4;
-  margin-left: 60px;
-}
-
-.navbar nav ul {
+/* -----------------------------------------------------------------------------------------------------*/
+/*--------------------------UTILITY CLASSES-------------------------------------------------------------*/
+/*------------------------------------------------------------------------------------------------------*/
+.flex {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  gap: var(--gap, 1rem);
 }
 
-.navbar a {
-  text-decoration: none;
-  color: white;
-  text-transform: uppercase;
-}
-
-ul {
-  margin: 0;
-  padding: 0;
-  list-style: none;
+.grid {
+  display: -ms-grid;
+  display: grid;
+  gap: var(--gap, 1rem);
 }
 
 .container {
-  position: relative;
-  top: 50px;
-  height: -webkit-max-content;
-  height: -moz-max-content;
-  height: max-content;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
+  padding-inline: 2em;
+  margin-inline: auto;
+  max-width: 80rem;
 }
 
-.container .desc {
-  width: -webkit-min-content;
-  width: -moz-min-content;
-  width: min-content;
+.sr-only {
+  position: absolute;
+  width: 1;
+  height: 1;
+  padding: 0;
+  margin: -1;
+  overflow: hidden;
+  white-space: nowrap;
+  border: 0;
+  clip: rect(0, 0, 0, 0);
 }
 
-.container h1 {
+/*---------colors------*/
+.bg-dark {
+  background-color: rgba(12, 14, 24, 0);
+}
+
+.bg-accent {
+  background-color: rgba(210, 216, 249, 0);
+}
+
+.bg-white {
+  background-color: rgba(210, 216, 249, 0);
+}
+
+.text-dark {
+  background-color: rgba(12, 14, 24, 0);
+}
+
+.text-accent {
+  background-color: rgba(210, 216, 249, 0);
+}
+
+.text-white {
+  background-color: rgba(255, 255, 255, 0);
+}
+
+.ff-serif {
+  font-family: var(--ff-serif);
+}
+
+.ff-sans-cond {
+  font-family: var(--ff-sans-cond);
+}
+
+.ff-sans-normal {
+  font-family: var(--ff-sans-normal);
+}
+
+.letter-spacing-1 {
+  letter-spacing: 4.75px;
+}
+
+.letter-spacing-2 {
+  letter-spacing: 2.7px;
+}
+
+.letter-spacing-3 {
+  letter-spacing: 2.35px;
+}
+
+.uppercase {
   text-transform: uppercase;
-  font-size: 8em;
-  text-align: center;
-  margin: auto 20px;
 }
 
-.container h3 {
+.fs-900 {
+  font-size: var(--fs-900);
+}
+
+.fs-800 {
+  font-size: var(--fs-800);
+}
+
+.fs-700 {
+  font-size: var(--fs-700);
+}
+
+.fs-600 {
+  font-size: var(--fs-600);
+}
+
+.fs-500 {
+  font-size: var(--fs-500);
+}
+
+.fs-400 {
+  font-size: var(--fs-400);
+}
+
+.fs-300 {
+  font-size: var(--fs-300);
+}
+
+.fs-200 {
+  font-size: var(--fs-200);
+}
+
+.fs-900,
+.fs-800,
+.fs-700,
+.fs-600 {
+  line-height: 1.1;
+}
+
+/*-------------numbers--------------*/
+.numberedtitles {
   text-transform: uppercase;
-  font-size: 1.5em;
+  letter-spacing: 4.72px;
+  font-size: var(--fs-500);
+  font-family: var(--ff-sans-cond);
 }
 
-.container .bot p {
-  font-size: 1.2em;
+.numberedtitles span {
+  font-weight: 700;
+  margin-right: 0.4em;
+  color: rgba(255, 255, 255, 0.25);
 }
 
-.explore {
-  width: 236px;
-  height: 236px;
-  border-radius: 50%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  background: white;
-}
-
-.explore p {
-  color: black;
-  font-size: 2em;
-}
+/* -----------------------------------------------------------------------------------------------------*/
+/*--------------------------UTILITY CLASSES-------------------------------------------------------------*/
+/*------------------------------------------------------------------------------------------------------*/
 /*# sourceMappingURL=index.css.map */
