--- a/styles/index.css
+++ b/styles/index.css
@@ -283,6 +283,15 @@ select {
           transform: scale(1.5);
 }
 
+.primary-header {
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
 .primarynavigation {
   --gap: 8rem;
   --underline-gap: 2rem;
