--- a/starter-code/index.scss
+++ b/starter-code/index.scss
@@ -127,6 +127,11 @@ select {
 	margin-inline: auto;
 	max-width: 80rem;
 }
+.grid-container {
+	display: grid;
+	column-gap: 2rem;
+	grid-template-columns: 2em repeat(2, minmax(0, 40rem)) 2em;
+}
 
 .sr-only {
 	position: absolute;
@@ -226,8 +231,8 @@ select {
 .numberedtitles {
 	text-transform: uppercase;
 	letter-spacing: 4.72px;
-	font-size: var(--fs-500);
-	font-family: var(--ff-sans-cond);
+	font-size: $fs-500;
+	font-family: $ff-sans-cond;
 }
 
 .numberedtitles span {
@@ -246,20 +251,20 @@ select {
 	position: relative;
 	z-index: 1;
 	display: inline-grid;
-	align-items: center;
-	justify-content: center;
+	place-items: center;
 	border-radius: 50%;
 	padding: 0 2em;
-	width: 100px;
-	height: 100px;
+	aspect-ratio: 0.5;
 	text-decoration: none;
 }
 
 .largebutton::after {
-	position: absolute;
 	content: "";
+	position: absolute;
 	width: 100%;
 	height: 100%;
+	background-color: hslac($clr-white, 0.1);
+	border-radius: 50%;
 	z-index: -1;
 	opacity: 0;
 	transition: opacity 500ms linear, transform 750ms ease-in-out;
@@ -302,7 +307,7 @@ select {
 }
 .underline-indicators > *:hover,
 .underline-indicators > *:focus {
-	border-color: hslac($clr-white, 0.25);
+	border-color: hslac($clr-white, 0.5);
 }
 
 .underline-indicators > .active,
