--- a/starter-code/index.scss
+++ b/starter-code/index.scss
@@ -13,7 +13,7 @@
 /*--------------------------------------------------------------------------------------------------*/
 
 /*--font sizes---*/
-$fs-900: 9.375rem;
+$fs-900: clamp(5rem, 8vw + 1rem, 9.375rem);
 $fs-800: 6.25rem;
 $fs-700: 3.5rem;
 $fs-600: 2rem;
@@ -32,6 +32,19 @@ $clr-dark: hsl(230, 35%, 7%);
 $clr-accent: hsl(231, 77%, 90%);
 $clr-white: hsl(0, 0%, 100%);
 
+@media (min-width: 35em) {
+	$fs-800: 5rem;
+	$fs-700: 2.5rem;
+	$fs-600: 1.5rem;
+	$fs-400: 1rem;
+}
+
+@media (min-width: 45em) {
+	$fs-800: 6.25rem;
+	$fs-700: 3.5rem;
+	$fs-600: 2rem;
+	$fs-400: 1.125rem;
+}
 /*--------------------------------------------------------------------------------------------------*/
 /*---------------------------DO RESETS FIRST--------------------------------------------------------*/
 /*--------------------------------------------------------------------------------------------------*/
@@ -128,15 +141,27 @@ select {
 	max-width: 80rem;
 }
 .grid-container {
+	border: 4px solid limegreen;
 	display: grid;
-	column-gap: 2rem;
-	grid-template-columns: 2em repeat(2, minmax(0, 40rem)) 2em;
 }
-.grid-container > *:first-child {
-	grid-column: 2;
-}
-.grid-container > *:last-child {
-	grid-column: 3;
+
+@media (min-width: 45em) {
+	.grid-container {
+		column-gap: var(--col-gap, 2rem);
+		grid-template-columns: minmax(2rem, 1fr) repeat(2, minmax(0, 40rem)) minmax(
+				2rem,
+				1fr
+			);
+	}
+
+	.grid-container > *:first-child {
+		grid-column: 2;
+		outline: 2px solid red;
+	}
+	.grid-container > *:last-child {
+		grid-column: 3;
+		outline: 2px solid yellow;
+	}
 }
 
 .sr-only {
