--- a/styles/index.css
+++ b/styles/index.css
@@ -109,22 +109,28 @@ select {
 }
 
 .grid-container {
+  border: 4px solid limegreen;
   display: -ms-grid;
   display: grid;
-  -webkit-column-gap: 2rem;
-          column-gap: 2rem;
-  -ms-grid-columns: 2em (minmax(0, 40rem))[2] 2em;
-      grid-template-columns: 2em repeat(2, minmax(0, 40rem)) 2em;
 }
 
-.grid-container > *:first-child {
-  -ms-grid-column: 2;
-  grid-column: 2;
-}
-
-.grid-container > *:last-child {
-  -ms-grid-column: 3;
-  grid-column: 3;
+@media (min-width: 45em) {
+  .grid-container {
+    -webkit-column-gap: var(--col-gap, 2rem);
+            column-gap: var(--col-gap, 2rem);
+    -ms-grid-columns: minmax(2rem, 1fr) (minmax(0, 40rem))[2] minmax(2rem, 1fr);
+        grid-template-columns: minmax(2rem, 1fr) repeat(2, minmax(0, 40rem)) minmax(2rem, 1fr);
+  }
+  .grid-container > *:first-child {
+    -ms-grid-column: 2;
+    grid-column: 2;
+    outline: 2px solid red;
+  }
+  .grid-container > *:last-child {
+    -ms-grid-column: 3;
+    grid-column: 3;
+    outline: 2px solid yellow;
+  }
 }
 
 .sr-only {
