--- a/starter-code/index.scss
+++ b/starter-code/index.scss
@@ -13,7 +13,7 @@
 /*--------------------------------------------------------------------------------------------------*/
 
 /*--font sizes---*/
-$fs-900: clamp(5rem, 8vw + 1rem, 9.375rem);
+$fs-900: clamp(5rem, 8vw, 9.375rem);
 $fs-800: 6.25rem;
 $fs-700: 3.5rem;
 $fs-600: 2rem;
@@ -135,18 +135,28 @@ select {
 	gap: var(--gap, 1rem);
 }
 
+.d-block {
+	display: block;
+}
+
 .container {
 	padding-inline: 2em;
 	margin-inline: auto;
 	max-width: 80rem;
 }
 .grid-container {
-	border: 4px solid limegreen;
 	display: grid;
+	text-align: center;
+	place-items: center;
+	padding-inline: 1rem;
+}
+.grid-container * {
+	max-width: 50ch;
 }
 
 @media (min-width: 45em) {
 	.grid-container {
+		text-align: left;
 		column-gap: var(--col-gap, 2rem);
 		grid-template-columns: minmax(2rem, 1fr) repeat(2, minmax(0, 40rem)) minmax(
 				2rem,
@@ -156,11 +166,13 @@ select {
 
 	.grid-container > *:first-child {
 		grid-column: 2;
-		outline: 2px solid red;
 	}
 	.grid-container > *:last-child {
 		grid-column: 3;
-		outline: 2px solid yellow;
+	}
+	.grid-container--home {
+		padding-bottom: 5rem;
+		align-items: end;
 	}
 }
 
@@ -281,6 +293,7 @@ select {
 .largebutton {
 	position: relative;
 	display: inline-grid;
+	font-size: 2rem;
 	padding: 2em;
 	border-radius: 50%;
 	aspect-ratio: 1;
@@ -362,4 +375,29 @@ select {
 
 .dot-indicators > [aria-selected="true"] {
 	background-color: hslac($clr-white, 1);
+}
+
+/*----------------------------------------------------------------*/
+/*------------PAGES-----------------------------------------------*/
+/*----------------------------------------------------------------*/
+body {
+	background-size: cover;
+	background-position: bottom center;
+}
+
+.home {
+	background-image: url("../starter-code/assets/home/background-home-mobile.jpg");
+}
+
+@media (min-width: 35rem) {
+	.home {
+		background-position: center center;
+		background-image: url("../starter-code/assets/home/background-home-tablet.jpg");
+	}
+}
+
+@media (min-width: 45rem) {
+	.home {
+		background-image: url("../starter-code/assets/home/background-home-desktop.jpg");
+	}
 }
