--- a/styles/index.css
+++ b/styles/index.css
@@ -102,6 +102,10 @@ select {
   gap: var(--gap, 1rem);
 }
 
+.d-block {
+  display: block;
+}
+
 .container {
   padding-inline: 2em;
   margin-inline: auto;
@@ -109,13 +113,20 @@ select {
 }
 
 .grid-container {
-  border: 4px solid limegreen;
   display: -ms-grid;
   display: grid;
+  text-align: center;
+  place-items: center;
+  padding-inline: 1rem;
+}
+
+.grid-container * {
+  max-width: 50ch;
 }
 
 @media (min-width: 45em) {
   .grid-container {
+    text-align: left;
     -webkit-column-gap: var(--col-gap, 2rem);
             column-gap: var(--col-gap, 2rem);
     -ms-grid-columns: minmax(2rem, 1fr) (minmax(0, 40rem))[2] minmax(2rem, 1fr);
@@ -124,12 +135,16 @@ select {
   .grid-container > *:first-child {
     -ms-grid-column: 2;
     grid-column: 2;
-    outline: 2px solid red;
   }
   .grid-container > *:last-child {
     -ms-grid-column: 3;
     grid-column: 3;
-    outline: 2px solid yellow;
+  }
+  .grid-container--home {
+    padding-bottom: 5rem;
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: end;
   }
 }
 
@@ -203,7 +218,7 @@ select {
 }
 
 .fs-900 {
-  font-size: 9.375rem;
+  font-size: clamp(5rem, 8vw, 9.375rem);
 }
 
 .fs-800 {
@@ -265,6 +280,7 @@ select {
   position: relative;
   display: -ms-inline-grid;
   display: inline-grid;
+  font-size: 2rem;
   padding: 2em;
   border-radius: 50%;
   aspect-ratio: 1;
@@ -358,5 +374,30 @@ select {
 
 .dot-indicators > [aria-selected="true"] {
   background-color: white;
+}
+
+/*----------------------------------------------------------------*/
+/*------------PAGES-----------------------------------------------*/
+/*----------------------------------------------------------------*/
+body {
+  background-size: cover;
+  background-position: bottom center;
+}
+
+.home {
+  background-image: url("../starter-code/assets/home/background-home-mobile.jpg");
+}
+
+@media (min-width: 35rem) {
+  .home {
+    background-position: center center;
+    background-image: url("../starter-code/assets/home/background-home-tablet.jpg");
+  }
+}
+
+@media (min-width: 45rem) {
+  .home {
+    background-image: url("../starter-code/assets/home/background-home-desktop.jpg");
+  }
 }
 /*# sourceMappingURL=index.css.map */
