--- a/styles/index.css
+++ b/styles/index.css
@@ -456,29 +456,128 @@ select {
   max-width: 50ch;
 }
 
+.grid-container .numberedtitles {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  grid-area: title;
+}
+
 @media (min-width: 45em) {
   .grid-container {
     text-align: left;
-    display: -ms-grid;
-    display: grid;
     -webkit-column-gap: var(--column-gap, 2rem);
             column-gap: var(--column-gap, 2rem);
     -ms-grid-columns: minmax(2rem, 1fr) (minmax(0, 40rem))[2] minmax(2rem, 1fr);
         grid-template-columns: minmax(2rem, 1fr) repeat(2, minmax(0, 40rem)) minmax(2rem, 1fr);
   }
-  .grid-container > *:first-child {
-    -ms-grid-column: 2;
-    grid-column: 2;
-  }
-  .grid-container > *:last-child {
-    -ms-grid-column: 3;
-    grid-column: 3;
-  }
-  .grid-container .grid-container--home {
+}
+
+@media (min-width: 45em) {
+  .grid-container--home {
     padding-bottom: max(6rem, 20vh);
     -webkit-box-align: end;
         -ms-flex-align: end;
             align-items: end;
+  }
+  .grid-container--home > *:first-child {
+    -ms-grid-column: 2;
+    grid-column: 2;
+  }
+  .grid-container--home > *:last-child {
+    -ms-grid-column: 3;
+    grid-column: 3;
+  }
+}
+
+.grid-container--destination {
+  --flow-space: 2rem;
+      grid-template-areas: "title" "image" "tabs" "content";
+}
+
+.grid-container--destination img {
+  -ms-grid-row: 2;
+  -ms-grid-column: 1;
+  grid-area: image;
+  max-width: 60%;
+}
+
+.grid-container--destination .tab-list {
+  -ms-grid-row: 3;
+  -ms-grid-column: 1;
+  grid-area: tabs;
+}
+
+.grid-container--destination .destination-info {
+  -ms-grid-row: 4;
+  -ms-grid-column: 1;
+  grid-area: content;
+}
+
+.grid-container--destination .destination-meta {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  border-top: 2px solid rgba(255, 255, 255, 0.1);
+  padding-top: 2.5rem;
+  margin-top: 2.5rem;
+}
+
+.grid-container--destination .destination-meta p {
+  font-size: 1.75rem;
+}
+
+@media (min-width: 35em) {
+  .grid-container--destination .numberedtitles {
+    -ms-grid-column-align: start;
+        justify-self: start;
+    margin-top: 2rem;
+  }
+  .grid-container--destination .destination-meta {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+  }
+}
+
+@media (min-width: 45em) {
+  .grid-container--destination {
+    justify-items: start;
+    -ms-flex-line-pack: start;
+        align-content: start;
+        grid-template-areas: ". title title ." ". image tabs ." ". image content .";
+  }
+  .grid-container--destination .numberedtitles {
+    -ms-grid-row: 1;
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 2;
+    grid-area: title;
+  }
+  .grid-container--destination picture {
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 2;
+    -ms-grid-column: 2;
+    grid-area: image;
+  }
+  .grid-container--destination .tab-list {
+    -ms-grid-row: 2;
+    -ms-grid-column: 3;
+    grid-area: tabs;
+  }
+  .grid-container--destination .destination-info {
+    -ms-grid-row: 3;
+    -ms-grid-column: 3;
+    grid-area: content;
+  }
+  .grid-container--destination .destination-meta {
+    --gap: 6rem;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: start;
   }
 }
 
