--- a/starter-code/index.scss
+++ b/starter-code/index.scss
@@ -403,7 +403,7 @@ select {
 .underline-indicators {
 	> * {
 		cursor: pointer;
-		padding: var(--underline-gap, 1.5rem) 0;
+		padding: var(--underline-gap, 0.5rem) 0;
 		border: 0;
 		border-bottom: 0.2rem solid hslac($clr-white, 0);
 		background: transparent;
@@ -449,7 +449,7 @@ select {
 	padding-inline: 1rem;
 	padding-bottom: 4rem;
 
-	* {
+	p:not([class]) {
 		max-width: 50ch;
 	}
 
@@ -537,6 +537,9 @@ select {
 		}
 		picture {
 			grid-area: image;
+			img {
+				max-width: 90%;
+			}
 		}
 		.tab-list {
 			grid-area: tabs;
@@ -548,6 +551,57 @@ select {
 		.destination-meta {
 			--gap: 6rem;
 			justify-content: start;
+		}
+	}
+}
+
+.grid-container--crew {
+	--flow-space: 2rem;
+	grid-template-areas:
+		"title"
+		"image"
+		"tabs"
+		"content";
+
+	picture {
+		grid-area: image;
+		img {
+			max-width: 60%;
+			border-bottom: 2px solid hslac($clr-white, 0.1);
+		}
+	}
+
+	.dot-list {
+		grid-area: tabs;
+	}
+
+	.crew-details {
+		grid-area: content;
+		h2 {
+			opacity: 0.5;
+		}
+	}
+
+	@media (min-width: 35em) {
+		padding-bottom: 0;
+		.numberedtitles {
+			justify-self: start;
+			margin-top: 2rem;
+		}
+		grid-template-areas: "title" "content" "tabs" "image";
+	}
+
+	@media (min-width: 45em) {
+		grid-template-areas: ".title title ." ".content image ." ". tabs image .";
+		.dot-indicators {
+			grid-area: tabs;
+			justify-self: start;
+		}
+
+		picture {
+			img {
+				max-width: 90%;
+			}
 		}
 	}
 }
@@ -570,50 +624,46 @@ body {
 	@media (min-width: 45em) {
 		background-image: url("../starter-code/assets/home/background-home-desktop.jpg");
 	}
+}
 
-	/* destination */
-	.destination {
-		background-image: url("../starter-code/assets/destination/background-destination-mobile.jpg");
+/* destination */
+.destination {
+	background-image: url("../starter-code/assets/destination/background-destination-mobile.jpg");
 
-		@media (min-width: 35em) {
-			background-position: center center;
-			background-image: url("../starter-code/assets/destination/background-destination-tablet.jpg");
-		}
-
-		@media (min-width: 45em) {
-			background-image: url("../starter-code/assets/destination/background-destination-desktop.jpg");
-		}
+	@media (min-width: 35em) {
+		background-position: center center;
+		background-image: url("../starter-code/assets/destination/background-destination-tablet.jpg");
 	}
 
-	/* crew */
-	.crew {
-		background-image: url("../starter-code/assets/home/background-crew-mobile.jpg");
-
-		@media (min-width: 35em) {
-			background-position: center center;
-			background-image: url("../starter-code/assets/crew/background-crew-tablet.jpg");
-		}
-
-		@media (min-width: 45em) {
-			background-image: url("../starter-code/assets/crew/background-crew-desktop.jpg");
-		}
-	}
-
-	/*technology*/
-	.technology {
-		background-image: url("../starter-code/assets/home/background-technology-mobile.jpg");
-
-		@media (min-width: 35em) {
-			background-position: center center;
-			background-image: url("../starter-code/assets/technology/background-technology-tablet.jpg");
-		}
-
-		@media (min-width: 45em) {
-			background-image: url("../starter-code/assets/technology/background-technology-desktop.jpg");
-		}
+	@media (min-width: 45em) {
+		background-image: url("../starter-code/assets/destination/background-destination-desktop.jpg");
 	}
 }
 
-/*------------------------------------------------------------------------------------------------------------------------------*/
-/*--------------------------------------------------------------------------------------LAYOUT------------------------------------*/
-/*--destination layout*/
+/* crew */
+.crew {
+	background-image: url("../starter-code/assets/crew/background-crew-mobile.jpg");
+
+	@media (min-width: 35em) {
+		background-position: center center;
+		background-image: url("../starter-code/assets/crew/background-crew-tablet.jpg");
+	}
+
+	@media (min-width: 45em) {
+		background-image: url("../starter-code/assets/crew/background-crew-desktop.jpg");
+	}
+}
+
+/*technology*/
+.technology {
+	background-image: url("../starter-code/assets/home/background-technology-mobile.jpg");
+
+	@media (min-width: 35em) {
+		background-position: center center;
+		background-image: url("../starter-code/assets/technology/background-technology-tablet.jpg");
+	}
+
+	@media (min-width: 45em) {
+		background-image: url("../starter-code/assets/technology/background-technology-desktop.jpg");
+	}
+}
